# phosphorus

./: .gitignore  Cargo.toml  README.md  gl-2021-02-03.xml  gl-2022-10-27.xml  gl.rs  gl.xml  glx.txt  rustfmt.toml  types.txt  wgl.txt
examples/: compat.rs  foo.rs  gl.rs  gl46.rs
src/: enumerations.rs  fn_type_signatures.rs  generators.rs  gl_command_types.rs  gl_core_types.rs  gl_enumerations.rs  gl_extension_deltas.rs  gl_extension_lists.rs  gl_feature_deltas.rs  gl_feature_lists.rs  gl_fns.rs  gl_groups.rs  global_opt_46fns.rs  groups.rs  lib.rs  main.rs  output.rs  registry.rs  source_managers.rs  special_numbers.rs  struct_gl46fns.rs  temp.rs  type_alias.rs  types.rs  xml.rs
src/xml/: gl.rs
src/xml/gl/: commands.rs  enums.rs  extensions.rs  features.rs  groups.rs  types.rs
xml/: vk.xml
