[package]
name = "phosphorus"
description = "Makes GL bindings for you."
version = "0.0.25-alpha.0"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/phosphorus"
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"

[dependencies]
magnesium = "1.2"
tinyvec = { version = "1", features = ["alloc"] }
chlorine = "1"

[profile.release]
lto = "thin"
